--- a/styles.css
+++ b/styles.css
@@ -10,19 +10,20 @@ html {
 
 body {
   font-family: "Poppins", serif;
-  height: 200vh;
   overflow-x: hidden;
 }
 
 :root {
   --primary-color: #FF5B00;
   --primary-color-hover: #d14900;
+  --tsp-primary-color: #ff590027;
   --secondary-color: #7EC3FF;
   --accent-color: #B2DFDB;
 }
 
 nav .logo .text {
   line-height: 15px !important;
+  color: #ff590089;
 }
 
 nav .logo .top-up {
@@ -50,7 +51,7 @@ nav .logo .bottom-up {
   border-radius: 10px;
 }
 
-#mobile-menu .active{
+#mobile-menu .active {
   color: var(--primary-color);
 }
 
@@ -200,9 +201,44 @@ nav .line {
   opacity: 1;
 }
 
+input:focus,
+textarea:focus,
+select:focus {
+  transition: .3s ease;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  border: 1px solid var(--primary-color);
+}
+
 .gallery-container .active {
   background-color: var(--primary-color);
 }
+
+.loader {
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-top: 2px solid white;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 1s linear infinite;
+  /* display: inline-block; */
+  margin-left: 8px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 
 /* Responsive adjustments */
 @media (max-width: 1024px) {
